--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@
 // limitations under the License.
 buildscript {
     ext.kotlin_version = '1.4.30'
+    ext.compose_version = '1.0.0-alpha11'
     repositories {
         google()
         jcenter()
